--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1",
+    "sqlite": "^4.1.2",
     "sqlite3": "^5.1.6"
   }
 }
