--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1",
     "sqlite": "^4.1.2",
